# SIMPLe

./: .gitignore  CMakeLists.txt  README.md  SIMPLe.ipynb  bimanual_teleoperation.py  dual_panda.py  feedback.py  main_crates_correction_statistics.py  main_crates_syncronization_statistics.py  main_record.py  package.xml  panda.py  recording_node.py  run_experiments.txt  server.py  setup.py
Examples/: SIMPLe.ipynb  Statistical_test.ipynb
SIMPLe/: REAME.md  SIMPLe.py  __init__.py  cleaning_experiment.py  dressing_experiment.py  main.py  modules.py  panda.py  pnp_experiment.py  pnp_experiment_new.py  recording_node.py  utils.py
SIMPLe_bimanual/: dual_panda.py  ggp.py  panda.py  utils.py
data/: dual_1_kin_cor1.npz  dual_1_kin_dem.npz  dual_1_kin_dem1.npz  dual_1_tel_dem1.npz  dual_2_kin_dem.npz  dual_2_tel_dem.npz  dual_3_kin_dem.npz  dual_3_tel_cor.npz  dual_4_kin_cor.npz  dual_4_kin_dem.npz  dual_4_tel_cor.npz  dual_4_tel_dem.npz  dual_4_tel_dem2.npz  dual_5_kin_cor.npz  dual_5_kin_dem.npz  dual_5_tel_cor.npz  dual_5_tel_dem.npz  dual_6_kin_cor.npz  dual_6_kin_dem.npz  dual_6_tel_cor.npz  dual_6_tel_cor1.npz  dual_6_tel_dem.npz  dual_7_kin_cor.npz  dual_7_kin_dem.npz  dual_7_tel_cor.npz  dual_7_tel_dem.npz  dual_last.npz  main.py  panda_left_last.npz  panda_right_last.npz
data_analysis/: data_analysis.py
recordings/: 04_18_12_30.npz  04_18_13_03.npz  04_18_13_43.npz  04_18_27_03.npz  04_18_27_46.npz
scripts/: bimanual_teleoperation.py  main_2.py  main_collaboration.py  main_conductor.py  main_coordination_keyboard.py  main_crates_correction.py  main_demo.py  (+13 more)
(+338 files in other folders)
